# beamtalk

./: .env.example  .gitattributes  .gitignore  .lint-beamtalk-stamp  .tool-versions  AGENTS.md  BT-95-REPL-DEMO.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ISSUE-linear-auto-reconnect-websocket.md  Justfile  PROOF_AUTO_AWAIT.md  PROTOOBJECT_DEMO.md  README.md  SECURITY.md  clippy.toml  demo_protoobject.py  erlang-coverage.json  erlang_ls.config  issue-adr-actor-observability.md  mise.toml  plan.md  pr_description.txt  rust-coverage.json
crates/beamtalk-build/: Cargo.toml  README.md
crates/beamtalk-build/src/: lib.rs
crates/beamtalk-cli/: Cargo.toml  README.md  _bt_e2e_special.txt  build.rs
crates/beamtalk-cli/benches/: build_bench.rs
crates/beamtalk-cli/src/: beam_compiler.rs  build_layout.rs  dependency_classes.rs  diagnostic.rs  erlc.rs  lib.rs  main.rs  manifest.rs  native_type_specs.rs  paths.rs  repl_startup.rs
crates/beamtalk-cli/templates/: Justfile  agents.md  ci.yml  compile.erl  compile.escript  copilot-instructions.md
crates/beamtalk-cli/tests/: cli_build.rs  cli_doc.rs  cli_doctor.rs  cli_fmt.rs  cli_lint.rs  cli_new.rs  cli_run.rs  cli_test.rs  cli_transcript.rs  e2e.rs  gen_native.rs  native_type_extraction.rs  repl_protocol.rs  runtime_tests.rs  spec_validation.rs
crates/beamtalk-compiler-port/: Cargo.toml  README.md  build.rs
crates/beamtalk-compiler-port/proptest-regressions/: main.txt
crates/beamtalk-compiler-port/src/: main.rs
crates/beamtalk-core/: Cargo.toml  README.md  build.rs
crates/beamtalk-core/benches/: compiler_pipeline.rs
crates/beamtalk-core/examples/: cerl_napkin_timing.rs  class_registry_example.erl  language_service.rs
crates/beamtalk-core/src/: ast.rs  ast.rs.bak  ast_walker.rs  erlang.rs  ffi_type_specs.rs  file_walker.rs  language_service.rs  lib.rs  project.rs  state_threading_selectors.rs  synthetic_selectors.rs  test_helpers.rs
crates/beamtalk-etf/: Cargo.toml  README.md
crates/beamtalk-etf/src/: lib.rs
crates/beamtalk-examples/: Cargo.toml  class_corpus.json  corpus.json
crates/beamtalk-examples/build-corpus/: Cargo.toml
crates/beamtalk-examples/src/: class_corpus.rs  class_search.rs  corpus.rs  lib.rs  search.rs
crates/beamtalk-exec/: Cargo.toml
crates/beamtalk-exec/src/: main.rs
crates/beamtalk-lsp/: Cargo.toml  README.md
crates/beamtalk-lsp/src/: main.rs  runtime.rs  server.rs
crates/beamtalk-mcp/: Cargo.toml  README.md
crates/beamtalk-mcp/src/: client.rs  main.rs  server.rs  workspace.rs
crates/beamtalk-parity-tests/: Cargo.toml
crates/beamtalk-parity-tests/src/: cases.rs  drivers.rs  lib.rs  normalize.rs  pool.rs
crates/beamtalk-parity-tests/tests/: diagnostic_parity.rs  lsp_parity.rs  parity.rs
crates/beamtalk-repl-protocol/: Cargo.toml
crates/beamtalk-repl-protocol/src/: format.rs  lib.rs  request.rs  response.rs
crates/beamtalk-repl-protocol/tests/: format_snapshots.rs
crates/beamtalk-surface-drift/: Cargo.toml  README.md
crates/beamtalk-surface-drift/src/: main.rs
crates/beamtalk-workspace/: Cargo.toml  README.md
crates/beamtalk-workspace/src/: lib.rs
crates/beamtalk-workspace/tests/: cross_crate_consistency.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/parse_arbitrary/: 001_counter.bt  002_hello.bt  003_logging_counter.bt  004_protoobject_proxy.bt  005_super_example.bt  006_actors.bt  007_arithmetic.bt  008_blocks.bt  009_booleans.bt  010_cascades.bt  011_class_reflection.bt  012_closures_advanced.bt  013_compiled_method.bt  014_control_flow.bt  015_equality.bt  016_errors.bt  017_field_mutations_do.bt  018_inheritance_super.bt  019_keyword_messages.bt  020_literals.bt  021_multi_statement.bt  022_object_reflection.bt  023_primitive_responds_to.bt  024_protoobject.bt  025_protoobject_actors.bt  026_protoobject_manual_test.bt  027_reflection_basic.bt  028_string_interpolation.bt  029_transcript.bt  030_unary_messages.bt  031_value_types.bt  032_variable_persistence.bt  033_array_destructuring.bt  034_sealed_native.bt  035_ensure_exception.bt
fuzz/fuzz_targets/: parse_arbitrary.rs
test-package-compiler/: COVERAGE_ANALYSIS.md  Cargo.toml  OPERATOR_IMPLEMENTATION_STATUS.md  README.md  build.rs
test-package-compiler/cases/abstract_class_spawn/: main.bt
test-package-compiler/cases/actor_conditional_field_mutations/: main.bt
test-package-compiler/cases/actor_enumeration_ops/: main.bt
test-package-compiler/cases/actor_list_ops_no_mutation/: main.bt
test-package-compiler/cases/actor_spawn/: main.bt
test-package-compiler/cases/actor_spawn_with_args/: main.bt
test-package-compiler/cases/actor_state_mutation/: main.bt
test-package-compiler/cases/annotated_local_vars/: main.bt
test-package-compiler/cases/async_keyword_message/: main.bt
test-package-compiler/cases/async_unary_message/: main.bt
test-package-compiler/cases/async_with_await/: main.bt
test-package-compiler/cases/binary_operators/: main.bt
test-package-compiler/cases/blocks_no_args/: main.bt
test-package-compiler/cases/boundary_deeply_nested/: main.bt
test-package-compiler/cases/boundary_long_identifiers/: main.bt
test-package-compiler/cases/boundary_mixed_errors/: main.bt
test-package-compiler/cases/boundary_unicode_identifiers/: main.bt
test-package-compiler/cases/cascade_complex/: main.bt
test-package-compiler/cases/cascades/: main.bt
test-package-compiler/cases/character_literals/: main.bt
test-package-compiler/cases/class_definition/: main.bt
test-package-compiler/cases/class_methods/: main.bt
test-package-compiler/cases/comment_handling/: main.bt
test-package-compiler/cases/control_flow_mutations/: main.bt
test-package-compiler/cases/control_flow_mutations_errors/: main.bt
test-package-compiler/cases/empty_blocks/: main.bt
test-package-compiler/cases/empty_method_body/: main.bt
test-package-compiler/cases/error_message/: main.bt
test-package-compiler/cases/error_recovery_invalid_syntax/: main.bt
test-package-compiler/cases/hello_world/: main.bt
test-package-compiler/src/: lib.rs
test-package-compiler/tests/: compiler_tests.rs
(+3334 files in other folders)
