# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = ["crates/*", "test-package-compiler"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
authors = ["James Casey"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/jamesc/beamtalk"

[workspace.dependencies]
# Workspace crates
beamtalk-core = { path = "crates/beamtalk-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Strings and paths
ecow = "0.2"
camino = "1"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Serialization (for snapshot tests)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# System directories
dirs = "6"

# Cryptography
sha2 = "0.10"
rand = "0.10"
base64 = "0.22"
# why: X.509 certificate generation for mTLS Erlang distribution (BT-692)
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File locking
fs2 = "0.4"

# Signal handling
ctrlc = "3"
libc = "0.2"
signal-hook = "0.3"

# Markdown rendering
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Line editing
rustyline = { version = "17", features = ["derive"] }

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Stack safety
stacker = "0.1"

# WebSocket (ADR 0020 — REPL protocol transport)
tungstenite = "0.26"
tokio-tungstenite = "0.28"

# Process management (ADR 0027 — Windows PID discovery)
sysinfo = "0.32"

# Testing
insta = { version = "1", features = ["yaml"] }
proptest = "1"

[workspace.lints.rust]
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow multiple versions from transitive dependencies
multiple_crate_versions = "allow"
# Restriction lints (opt-in for quality)
clone_on_ref_ptr = "warn"
undocumented_unsafe_blocks = "warn"
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
