# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "2"
members = ["crates/*", "crates/beamtalk-examples/build-corpus", "test-package-compiler"]
exclude = ["fuzz"]

[workspace.package]
# Keep in sync with VERSION file at repo root
version = "0.3.1"
authors = ["James Casey"]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/jamesc/beamtalk"

[workspace.dependencies]
# Workspace crates
beamtalk-core = { path = "crates/beamtalk-core" }
beamtalk-examples = { path = "crates/beamtalk-examples" }
beamtalk-workspace = { path = "crates/beamtalk-workspace" }

# CLI
clap = { version = "4", features = ["derive"] }

# Strings and paths
ecow = "0.2"
camino = "1"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Serialization (for snapshot tests)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# System directories
dirs = "6"

# Cryptography
sha2 = "0.10"
rand = "0.10"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# File locking
fs2 = "0.4"

# Signal handling
ctrlc = "3"
libc = "0.2"
signal-hook = "0.4"

# Markdown rendering
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Line editing
rustyline = { version = "18", features = ["derive"] }

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Stack safety
stacker = "0.1"

# WebSocket (ADR 0020 — REPL protocol transport)
tungstenite = "0.29"
tokio-tungstenite = "0.29"

# Windows process management (native replacement for sysinfo, BT-1039)
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

# Diff generation (for beamtalk fmt-check unified diff output)
similar = "2"

# Testing
insta = { version = "1", features = ["yaml"] }
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.rust]
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow multiple versions from transitive dependencies
multiple_crate_versions = "allow"
# Restriction lints (opt-in for quality)
clone_on_ref_ptr = "warn"
undocumented_unsafe_blocks = "warn"
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
