# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-cli"
description = "Beamtalk compiler command-line interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["compiler", "beam", "smalltalk", "erlang"]
categories = ["compilers", "development-tools"]

[lib]
name = "beamtalk_cli"
path = "src/lib.rs"

[[bin]]
name = "beamtalk"
path = "src/main.rs"

[dependencies]
beamtalk-core.workspace = true
clap.workspace = true
camino.workspace = true
miette.workspace = true
thiserror.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
libc.workspace = true
# why: non-destructive SIGINT registration for Ctrl-C during eval (BT-666)
signal-hook.workspace = true
rustyline.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
# why: X.509 certificate generation for mTLS Erlang distribution (BT-692)
rcgen.workspace = true
fs2.workspace = true
# why: render markdown doc comments and README to HTML (replaces hand-rolled renderer)
pulldown-cmark.workspace = true
# why: temporary files for REPL evaluation and workspace management
tempfile = "3.14"
# why: WebSocket client for REPL protocol (ADR 0020)
tungstenite.workspace = true
# why: Cross-platform process management for Windows PID discovery (ADR 0027)
sysinfo.workspace = true
# why: unified diff output for beamtalk fmt-check (BT-978)
similar.workspace = true

[dev-dependencies]
serial_test = "3"
tempfile = "3.14"

[lints]
workspace = true
