# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-compiler-port"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OTP Port binary for the Beamtalk compiler (ADR 0022)"
readme = "README.md"
keywords = ["compiler", "beam", "smalltalk", "erlang"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "beamtalk-compiler-port"
path = "src/main.rs"

[dependencies]
beamtalk-core = { workspace = true }
# why: encode/decode Erlang External Term Format for compiler port protocol
eetf = "0.11"
# why: CLI argument parsing for -v/--verbose flag
clap = { workspace = true }
# why: structured logging for compiler port diagnostics
tracing = { workspace = true }
# why: tracing output formatting and env-filter for verbosity control
tracing-subscriber = { workspace = true }

[dev-dependencies]
# why: property-based testing for compiler port robustness (ADR 0011 Phase 4)
proptest = { workspace = true }

[lints]
workspace = true
