# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-core"
description = "Beamtalk compiler core: lexer, parser, AST, type checking, and code generation"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["compiler", "beam", "smalltalk", "erlang"]
categories = ["compilers", "development-tools"]

[dependencies]
ecow.workspace = true
camino.workspace = true
thiserror.workspace = true
miette.workspace = true
stacker.workspace = true
dirs.workspace = true
serde = { workspace = true, optional = true }
# why: ADR 0088 Phase 0b — cerl AST nodes ETF-encode through `eetf` so the
# wire bytes match `term_to_binary(cerl:c_module(...))` on the Erlang side.
eetf = "0.12"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true
serde_json.workspace = true
tempfile = "3.14"

[[bench]]
name = "compiler_pipeline"
harness = false

[features]
default = []
## Expose `test_helpers::test_support` for use in dependent crates' dev-dependencies.
## Add `beamtalk-core = { features = ["test"] }` to the dependent crate's
## `[dev-dependencies]` section to enable this.
test = []
## Enable serde Serialize/Deserialize derives on ClassInfo and related types.
## Used by beamtalk-cli to persist Pass 1 metadata cache for incremental builds.
serde = ["dep:serde", "ecow/serde"]

[lints]
workspace = true
