# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-examples"
description = "Bundled example corpus and keyword search for Beamtalk MCP server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["beamtalk", "examples", "corpus", "mcp"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
