# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-exec"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OTP Port binary for subprocess management (ADR 0051)"
readme = "README.md"
keywords = ["subprocess", "beam", "smalltalk", "erlang"]
categories = ["development-tools"]

[[bin]]
name = "beamtalk-exec"
path = "src/main.rs"

[dependencies]
# why: encode/decode Erlang External Term Format for exec port protocol
eetf = "0.11"
# why: CLI argument parsing for -v/--verbose flag
clap = { workspace = true }
# why: structured logging for exec port diagnostics
tracing = { workspace = true }
# why: tracing output formatting and env-filter for verbosity control
tracing-subscriber = { workspace = true }
# why: process group management (setsid, kill) on Unix
libc = { workspace = true }

[lints]
workspace = true
