# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-lsp"
description = "Language Server Protocol server for the Beamtalk programming language"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["lsp", "beam", "smalltalk", "erlang"]
categories = ["development-tools"]
readme = "README.md"

[[bin]]
name = "beamtalk-lsp"
path = "src/main.rs"

[dependencies]
beamtalk-core = { workspace = true, features = ["serde"] }
beamtalk-repl-protocol = { workspace = true }
beamtalk-workspace = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
camino = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros"] }
tempfile = "3.14"

[lints]
workspace = true
