# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-mcp"
description = "MCP server for beamtalk REPL — agent interaction with live objects"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mcp", "beam", "smalltalk", "repl"]
categories = ["development-tools"]

[[bin]]
name = "beamtalk-mcp"
path = "src/main.rs"

[dependencies]
# why: MCP SDK for Model Context Protocol server implementation
rmcp = { version = "1.1", features = ["server", "macros", "transport-io", "schemars"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "process", "sync", "signal", "time"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI
clap.workspace = true

# Core compiler for lint passes in the lint MCP tool
beamtalk-core.workspace = true

# UTF-8 path handling for lint file collection
camino.workspace = true

# Shared workspace utilities (ID generation, port/cookie file I/O)
beamtalk-workspace.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# why: WebSocket client for REPL protocol (ADR 0020)
tokio-tungstenite.workspace = true
# why: Stream/Sink combinators for WebSocket I/O
futures-util = "0.3"

# Bundled example corpus and search (ADR 0062)
beamtalk-examples.workspace = true

# why: SHA-256 hashing for search telemetry query_hash field
sha2.workspace = true

[lints]
workspace = true
