# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-parity-tests"
description = "Cross-surface parity test harness for Beamtalk (REPL / MCP / CLI / LSP)"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "beamtalk_parity_tests"
path = "src/lib.rs"

[dependencies]
beamtalk-repl-protocol.workspace = true
beamtalk-workspace.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net", "process", "sync", "time"] }
tokio-tungstenite.workspace = true
futures-util = "0.3"
tracing.workspace = true

[[test]]
name = "parity"
path = "tests/parity.rs"

[lints]
workspace = true
