# Copyright 2026 James Casey
# SPDX-License-Identifier: Apache-2.0

[package]
name = "beamtalk-workspace"
description = "Shared workspace ID generation and file I/O for beamtalk tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["beam", "smalltalk", "workspace"]
categories = ["development-tools"]

[lib]
name = "beamtalk_workspace"
path = "src/lib.rs"

[dependencies]
dirs.workspace = true
miette.workspace = true
sha2.workspace = true
tracing.workspace = true

[dev-dependencies]
sha2.workspace = true

[lints]
workspace = true
